yaml/hello-world/hello-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  labels:
    app: hello
    zone: prod
    version: v1
spec:
  containers:
  - name: hello-cntr
    image: metamagicglobal/hello:v1.0
    imagePullPolicy: IfNotPresent
    ports:
     - containerPort: 80
