yaml/hello-world/hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  labels:
    app: hello-svc
spec:
  selector:
    app: hello
  type: NodePort
  ports:
   - port: 80
     nodePort: 31100
     targetPort: 80
