yaml/hello-world/hello-without-selector-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: mysql-without-container
  namespace: Helloworld
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3306
