yaml/hello-world/ingress-example.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ing
  namespace: helloworld
spec:
  rules:
 - http:
      paths:
      - path: /
        backend:
          serviceName: hello-svc
          servicePort: 80
